--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,5 +1,4 @@
-# Build and deploy Sphinx documentation to GitHub Pages
-# Synced from jbcom-control-center
+# Build and deploy TypeDoc documentation to GitHub Pages
 name: Deploy Documentation to Pages
 
 on:
@@ -20,42 +19,38 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # actions/checkout v6.0.1
       - name: Checkout
         uses: actions/checkout@v4
 
-      # actions/setup-python v6.1.0
-      - name: Setup Python
-        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          python-version: "3.12"
+          node-version: '22'
 
-      # astral-sh/setup-uv v7.1.6
-      - name: Install uv
-        uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
-          version: "latest"
+          version: 9
 
-      - name: Install documentation dependencies
-        run: uv sync --extra docs
+      - name: Install dependencies
+        run: pnpm install
 
-      - name: Build documentation
-        run: |
-          cd docs
-          uv run sphinx-build -b html . _build/html
+      - name: Build TypeScript
+        run: pnpm run build
+
+      - name: Generate TypeDoc documentation
+        run: pnpm run docs
 
       - name: Add .nojekyll
-        run: touch docs/_build/html/.nojekyll
+        run: touch docs/_build/api/.nojekyll
 
-      # actions/configure-pages v5.0.0
       - name: Setup Pages
         uses: actions/configure-pages@983d7736d9b0ae728b81ab479565c72886d7745b
 
-      # actions/upload-pages-artifact v4.0.0
       - name: Upload artifact
         uses: actions/upload-pages-artifact@7b1f4a764d45c48632c6b24a0339c27f5614fb0b
         with:
-          path: 'docs/_build/html'
+          path: 'docs/_build/api'
 
   deploy:
     environment:
@@ -64,7 +59,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      # actions/deploy-pages v4.0.5
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e
