--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
         "format:check": "biome format .",
         "check": "biome check .",
         "check:fix": "biome check --write .",
-        "prepare": "husky"
+        "docs": "typedoc",
+        "prepare": "husky",
+        "semantic-release": "semantic-release"
     },
     "keywords": [
         "triage",
@@ -76,11 +78,11 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/jbcom/nodejs-agentic-triage.git"
+        "url": "git+https://github.com/agentic-dev-library/triage.git"
     },
-    "homepage": "https://github.com/jbcom/nodejs-agentic-triage#readme",
+    "homepage": "https://github.com/agentic-dev-library/triage#readme",
     "bugs": {
-        "url": "https://github.com/jbcom/nodejs-agentic-triage/issues"
+        "url": "https://github.com/agentic-dev-library/triage/issues"
     },
     "engines": {
         "node": ">=20"
@@ -103,12 +105,20 @@
     "devDependencies": {
         "@biomejs/biome": "^2.3.10",
         "@playwright/test": "^1.57.0",
+        "@semantic-release/changelog": "^6.0.3",
+        "@semantic-release/commit-analyzer": "^13.0.1",
+        "@semantic-release/git": "^10.0.1",
+        "@semantic-release/github": "^12.0.2",
+        "@semantic-release/npm": "^13.1.3",
+        "@semantic-release/release-notes-generator": "^14.1.0",
         "@types/node": "^25.0.3",
         "@vitest/coverage-v8": "^3.2.4",
         "husky": "^9.1.7",
         "lint-staged": "^16.2.7",
         "rimraf": "^6.1.2",
+        "semantic-release": "^25.0.2",
         "tsx": "^4.21.0",
+        "typedoc": "^0.28.15",
         "typescript": "^5.9.3",
         "vitest": "^3.2.4"
     },
